# FlashEdge

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashedge_coreml.yaml  flashedge_onnx_mobile.yaml  flashedge_openvino.yaml  flashedge_tflite.yaml
docker/: Dockerfile  docker-compose.yml
docs/: CoreML.md  FAQ.md  Home.md  Installation.md  ONNX-Export.md  Profiling.md  Quick-Start.md  TFLite.md
examples/: benchmark_latency.py  deploy_edge.py  export_onnx.py  export_tflite.py  profile_model.py
flashedge/: __init__.py  cli.py  registry.py
flashedge/analytics/: __init__.py  benchmark.py  metrics.py
flashedge/cfg/: __init__.py  config.py
flashedge/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flashedge/export/: __init__.py  coreml_export.py  executorch_export.py  ncnn_export.py  onnx_export.py  openvino_export.py  tflite_export.py  torchscript.py
flashedge/models/: __init__.py  flashedge_model.py  lora.py
flashedge/models/architectures/: __init__.py  efficientnet.py  mobilenet.py  tiny_vit.py
flashedge/optimization/: __init__.py  distillation.py  graph_optimization.py  int4_quantization.py  mixed_precision.py  nas.py  pruning.py  quantization.py
flashedge/profiling/: __init__.py  device_benchmark.py  flops.py  latency.py  memory.py  power.py
flashedge/runtime/: __init__.py  onnx_runtime.py  openvino_runtime.py  tflite_runtime.py
flashedge/solutions/: __init__.py  device_profiler.py  edge_deployer.py  model_optimizer.py
flashedge/utils/: __init__.py  callbacks.py  io.py  visualize.py
tests/: test_comprehensive.py  test_export.py  test_new_components.py  test_profiling.py  test_registry.py
